<resources>
    <string name="app_name">DoctorDroid</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="forgot_password">Forgot Password?</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="login">Login</string>
    <string name="or">or</string>

    <string name="Welcome_text">"Welcome to Doctor Droid!"</string>
    <string name="correction_text">"hi"</string>
    <string name="Just_ask">"“Just Ask”"</string>
    <string name="create_account">Create your account</string>
    <string name="sign_up">Sign up</string>
    <string name="email">Enter your email</string>
    <string name="log_in">Log in</string>
    <string name="password">Enter your password</string>
    <string name="show_password">Show password</string>
    <string name="reenter_password">Re-enter your password</string>
    <string name="sign_up_title">Sign up</string>
    <string name="login_title">Login</string>
    <string name="Welcome_back">“Welcome Back!”</string>
    <string name="no_account">Don\'t have an account?</string>
    <string name="forget">I forgot my password</string>
    <string name="name"><font size="15">Name</font></string>
    <string name="welcome">Welcome</string>
    <string name="please_sign_in">Sign in to continue</string>
    <string name="Password">Password</string>
    <string name="Email"><font size="15">Email</font></string>
    <string name="remember_me">Remember me</string>
    <string name="please_sign_up">Sign up to continue</string>
    <string name="discover">“Discover your diseases easily”</string>
    <string name="sign_up_with">Sign up with</string>
    <string name="title_activity_maps">Map</string>

    <string name="facebook_app_id">1011680025885335</string>
    <string name="fb_login_protocol_scheme">fb1011680025885335</string>

    <string name="reset_password_description">* We will send you a link through email to reset your password</string>
    <string name="About_us">About us</string>
    <string name="first_paragraph_about_us">DoctorDroid is an android application intended to solve the problem of public health in the Egyptian society. Using an interview-like interface, the user starts by describing the symptoms he suffers from. Then, the application asks some questions based on the initial description of the symptoms.After that, the application sends to the user the best probability of gis disease and a percentage of this disease</string>
    <string name="Contributors">Contributors</string>
    <string name="Abdallah">Abdallah Ahmed: Android Developer</string>
    <string name="Mohamed">Mohamed Atef and Ahmed Mustafa: UI/UX Designers</string>
</resources>

