<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">

        <TextView
            android:id="@+id/About_us"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/About_us"
            android:gravity="center_horizontal"
            android:layout_centerHorizontal="true"
            android:textColor="#000"
            android:textStyle="bold"
            android:textSize="32sp"
            android:fontFamily="@font/abhaya_libre"/>

        <ImageView
            android:id="@+id/medical_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/hjgbj"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:layout_below="@id/About_us"
            android:layout_marginTop="-64dp" />

        <TextView
            android:id="@+id/first_paragraph"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/first_paragraph_about_us"
            android:layout_below="@id/medical_image"
            android:layout_marginStart="16dp"
            android:textColor="#000"
            android:textSize="16sp"
            android:layout_marginTop="-48dp"/>
        <TextView
            android:id="@+id/Contributors"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Contributors"
            android:layout_below="@id/first_paragraph"
            android:layout_centerHorizontal="true"
            android:textStyle="bold"
            android:textSize="24sp"
            android:textColor="#000"
            android:layout_marginTop="24dp"
            android:layout_marginStart="16dp"/>

        <TextView
            android:id="@+id/Abdallah"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Abdallah"
            android:layout_below="@id/Contributors"
            android:layout_centerHorizontal="true"
            android:layout_alignParentStart="true"
            android:textSize="16sp"
            android:textColor="#000"
            android:layout_marginTop="8dp"
            android:layout_marginStart="16dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Mohamed"
            android:layout_below="@id/Abdallah"
            android:layout_centerHorizontal="true"
            android:layout_alignParentStart="true"
            android:textSize="16sp"
            android:textColor="#000"
            android:layout_marginTop="8dp"
            android:layout_marginStart="16dp" />

    </RelativeLayout>



</ScrollView>