<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff">

    <LinearLayout
        android:id="@+id/linear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/sign_up_to_continue"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="84dp"
        android:orientation="vertical">

        <!--     Username   -->
        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/register_username_text"
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:background="@drawable/edit_text_signup"
            android:drawableStart="@drawable/ic_person_outline_black_24dp"
            android:drawablePadding="30dp"
            android:hint="@string/name"
            android:inputType="text"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:textColor="#000"
            android:textColorHint="#a4a4a4" />

        <!--     Email address   -->
        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/register_email_text"
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginTop="12dp"
            android:background="@drawable/edit_text_signup"
            android:drawableStart="@drawable/ic_mail2_outline_black_24dp"
            android:drawablePadding="30dp"
            android:hint="@string/Email"
            android:inputType="textEmailAddress"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:textColor="#000"
            android:textColorHint="#a4a4a4" />


        <!--     password       -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:hint="@string/Password"
            android:textColorHint="#a4a4a4"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/colorAccent">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/register_password_text"
                android:layout_width="300dp"
                android:layout_height="40dp"
                android:background="@drawable/edit_text_signup"
                android:drawableStart="@drawable/ic_lock_outline_black_24dp"
                android:drawablePadding="30dp"
                android:inputType="textPassword"
                android:paddingStart="18dp"
                android:paddingEnd="8dp"
                android:textColor="#000" />

        </com.google.android.material.textfield.TextInputLayout>

        <!--    confirm password    -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:hint="@string/reenter_password"
            android:textColorHint="#a4a4a4"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/colorAccent">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/register_confirm_password_text"
                android:layout_width="300dp"
                android:layout_height="40dp"
                android:background="@drawable/edit_text_signup"
                android:drawableStart="@drawable/ic_lock_outline_black_24dp"
                android:drawablePadding="30dp"
                android:inputType="textPassword"
                android:paddingStart="18dp"
                android:paddingEnd="8dp"
                android:textColor="#000" />

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/register_button"
            android:layout_width="155dp"
            android:layout_height="45dp"
            android:layout_gravity="end"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="32dp"
            android:background="@drawable/button"
            android:text="@string/sign_up"
            android:textColor="#fff"
            android:textStyle="bold" />

    </LinearLayout>

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/logo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="40dp"
        android:src="@drawable/logo" />


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/logo"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/abhaya_libre"
        android:text="@string/welcome"
        android:textColor="#ee3a68"
        android:textSize="40sp"
        android:textStyle="bold" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/sign_up_to_continue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/welcome"
        android:layout_marginStart="36dp"
        android:layout_marginTop="-10dp"
        android:text="@string/please_sign_up"
        android:textColor="#a4a4a4"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/line"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="32dp"
        android:background="@drawable/line_sign_up" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/no_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="24dp"
        android:text="@string/discover"
        android:textColor="@color/colorAccent"
        android:textStyle="bold" />

</RelativeLayout>



